# DeSnapper-btrfs

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  btrfs.c  travis_build_deb.sh
deb/DEBIAN/: control  copyright
deb/usr/lib/python3/dist-packages/DeSnapper_btrfs/: __init__.py
